# TTL-Legacy

./: .clippy.toml  .env.example  AUDIT_RESPONSE_DRAFT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.yml  pr-description-873.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  simulator.html
backend/src/: audit.rs  cache.rs  consensus.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  notifications.rs  routes.rs  scheduler.rs  tests.rs  two_factor.rs
contracts/ttl_vault/: Cargo.toml
contracts/ttl_vault/src/: beneficiary_auction_tests.rs  beneficiary_clawback_tests.rs  clone_vault_tests.rs  grace_period_tests.rs  lib.rs  lifecycle_tests.rs  oracle.rs  test.rs  trigger_release_bench_tests.rs  types.rs
contracts/zk_verifier/: Cargo.toml
docs/: architecture.md  benchmarking-guide.md  openapi.yaml  security-audit-checklist.md  ttl-logic.md  vesting-schedules.md
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/ttllegacy/api/: ApiClient.kt
mobile/android/app/src/main/java/com/ttllegacy/models/: Models.kt
mobile/android/app/src/main/java/com/ttllegacy/services/: NotificationHelper.kt  (+1 more)
mobile/android/app/src/test/java/com/ttllegacy/: VaultDeepLinkParserTest.kt
mobile/ios/TTLLegacy/Sources/App/: TTLLegacyApp.swift
mobile/ios/TTLLegacy/Sources/Models/: Models.swift
mobile/ios/TTLLegacy/Sources/Services/: APIClient.swift  UniversalLinkRouter.swift
mobile/ios/TTLLegacy/Sources/Views/: Views.swift
mobile/ios/TTLLegacy/Tests/: TTLLegacyTests.swift
scripts/: deploy_mainnet.sh  deploy_testnet.sh  deploy_utils.sh
(+3 files in other folders)
