[workspace]
resolver = "2"
members = ["contracts/ttl_vault", "contracts/zk_verifier", "backend"]

[workspace.lints.clippy]
# Pedantic lints are enabled workspace-wide; CI promotes warnings to errors via
# `cargo clippy -- -D warnings`. Selective allows below cover accepted patterns
# for Soroban contracts and the large vault API surface.
pedantic = { level = "warn", priority = -1 }

# Soroban contract naming and API conventions
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
unused_self = "allow"

# Integer conversions common in on-chain ledger/time math
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Documentation style; enforced selectively as the codebase matures
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

# Large domain models and error enums
enum_variant_names = "allow"
struct_field_names_as_self_description = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
similar_names = "allow"

# Control-flow patterns used throughout contract logic
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
single_match_else = "allow"
implicit_hasher = "allow"
indexing_slicing = "allow"

# Test helpers
should_panic_without_expect = "allow"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
